# website-seo-scanner

./: docker-compose.yml  example.py  main.py  pyproject.toml  test.py
website_seo_scanner/: ai.py  cleaners.py  depends.py  linting.py  nlp.py  page_linting.py  performance.py  report.py  schemas.py  server.py  services.py  settings.py  stealth.py  tree.py  utils.py
website_seo_scanner/ai/: prompts.py  utils.py
website_seo_scanner/stealth/: __init__.py  fingerprint.py  scripts.py
