[project]
name = "website-seo-scanner"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "bs4>=0.0.2",
    "ddgs>=9.6.0",
    "duckduckgo-search>=8.1.1",
    "embeddings-service[langchain]",
    "fastapi[all]>=0.118.0",
    "fastmcp>=2.12.4",
    "html2text>=2025.4.15",
    "langchain>=0.3.27",
    "langchain-gigachat>=0.3.12",
    "mypy>=1.18.2",
    "nltk>=3.9.2",
    "playwright>=1.55.0",
    "playwright-stealth>=2.0.0",
    "polars>=1.34.0",
    "ruff>=0.13.2",
    "scikit-learn>=1.7.2",
    "sentence-transformers>=5.1.1",
    "spacy>=3.8.7",
    "sqlalchemy>=2.0.43",
    "torch>=2.8.0",
    "transformers>=4.57.1",
    "ultimate-sitemap-parser>=1.6.0",
]

[tool.ruff]
line-length = 99
preview = true
exclude = [
    "migrations",
    "migration",
    "src/migrations",
    "alembic.ini",
    "**/__pycache__",
    "**/.mypy_cache",
    "**/.ruff_cache",
    "**/.venv"
]

[tool.ruff.lint]
select = [
    "F",
    "E",
    "W",
    "C90",
    "I",
    "N",
    "UP",
    "YTT",
    "ASYNC",
    "S",
    "BLE",
    "B",
    "A",
    "COM",
    "C4",
    "DTZ",
    "T10",
    "EXE",
    "ISC",
    "ICN",
    "G",
    "INP",
    "PIE",
    "T20",
    "PYI",
    "PT",
    "Q",
    "RSE",
    "RET",
    "SLF",
    "SLOT",
    "SIM",
    "TID",
    "INT",
    "ARG",
    "TD",
    "FIX",
    "ERA",
    "PD",
    "PGH",
    "PL",
    "TRY",
    "FLY",
    "NPY",
    "AIR",
    "PERF",
    "FURB",
    "LOG",
    "RUF",
]
ignore = [
    "S105",
    "S101",
    "B008",
    "TRY201",
    "PLW3201",
    "N805",
    "PTH",
    "COM812",
    "ISC001",
    "TRY003",
    "PT013",
    "TID252",
    "RUF001",
    "RUF002",
    "RUF003",
    "ASYNC109",
]

[tool.ruff.lint.isort]
section-order = [
    "future",
    "typings",
    "standard-library",
    "third-party",
    "first-party",
    "local-folder",
]

[tool.ruff.lint.isort.sections]
"typings" = ['typing']

[tool.ruff.lint.pylint]
max-args = 15
max-returns = 10
max-branches = 30

# -- MyPy --
[tool.mypy]
ignore_missing_imports = true
exclude = [
    "src/migration",
    "src/migrations",
    "__samples__",
    ".venv"
]

# -- Vulture --
[tool.vulture]
exclude = [
    ".vscode/",
    "__samples__/",
    "tests",
    ".venv"
]
ignore_names = [
    "post",
    "put",
    "delete",
    "head"
]

[tool.uv.sources]
embeddings-service = { git = "https://github.com/Andr171p/embeddings-service.git" }
